--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -18,6 +18,18 @@
   }
 } */
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .bg-primary {
   background-color: #1B49FF;
 }
